<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/nav_home"
        android:icon="@drawable/ic_home_24"
        android:title="@string/nav_home" />
    <item
        android:id="@+id/nav_categories"
        android:icon="@drawable/ic_grid_view_24"
        android:title="@string/nav_categories" />
    <item
        android:id="@+id/nav_chats"
        android:icon="@drawable/ic_chat_bubble_24"
        android:title="@string/nav_chats" />
    <item
        android:id="@+id/nav_orders"
        android:icon="@drawable/ic_receipt_long_24"
        android:title="@string/nav_orders" />
    <item
        android:id="@+id/nav_profile"
        android:icon="@drawable/ic_person_24"
        android:title="@string/profile" />
</menu>

